# project1_zimakosov_vladislav_m25-555

./: .gitignore  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
