[tool.poetry]
name = "project1-zimakosov-vladislav-m25-555"
version = "0.1.0"
description = ""
authors = ["Vlad Zimakosov <zimakosov-vladik@yandex.ru>"]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)"
]
